2010-05-11  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libpng 1.4.2

2010-05-04  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Make type "boolean" available everywhere, so individual
	  handlers don't need to define Boln any more.
	* Formatting.
	* Make --enable-symbols build on MSVC a little bit
	  closer to reality and explain disabled warnings.

2010-05-03  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Use PNGTCLAPI in stead of EXTERN in tkImg png package
	* xbm fix unused variable

2010-04-30  Andreas Kupries <andreask@activestate.com>

	* Fix building tkimg --disable-shared

2010-04-28  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* More MODULE_SCOPE functions in base
	* Use TKIMGAPI in stead of EXTERN in tkImg base package
	* Fix various gcc and MSVC warnings
	* upgrade to libpng 1.4.1

2010-04-23  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to zlib 1.2.5

2010-04-14  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Regenerate all configure scripts with latest TEA tcl.m4

2010-04-09  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Only build pkgIndex.tcl when something changed.

2010-04-07  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* TkimgInitUtilities() always succeeds, and does not
	  return TCL_ERROR/TCL_OK.
	* Eliminate forced dependancy for aqua on
	  ::tk::unsupported::MacWindowStyle
	* Eliminate msgcat compatibility layer

2010-04-01  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* [Bug 2975449] Kill the Tk 8.2/8.3 ifdeffery - at
	  least the runtime swizzle (I don't consider
	  this a bug at all, because it worked fine
	  as long as it was needed!)
	* [Bug 2907616] configure ignores --mandir switch

2010-03-31  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Sync with latest TEA (tcl.m4), regenerated all
	  configure scripts with autoconf-2.65.
	* Sync genStubs.tcl with latest one from Tcl 8.6,
	  regenerated all *Decls.h files. All stubs
	  pointers are const now.
    